--- a/main.html
+++ b/main.html
@@ -3,13 +3,90 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Movie Gallery</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
+    <div class="fluid">
+        <div class="row">
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider man">
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man">
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider-man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider-man">
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider-man">
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider Man">
+            </div>
+        </div>
+    </div>
 
 </body>
 
