--- a/main.html
+++ b/main.html
@@ -14,76 +14,76 @@
     <div class="fluid">
         <div class="row">
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider man">
-            </div>
-        </div>
-        <div class="row">
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
-            </div>
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
-            </div>
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
-            </div>
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
-            </div>
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
-            </div>
-            <div>
-                <img src="./assets/spider-man.jpg" alt="spider man">
+                <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
         </div>
         <div class="row">
             <div>
-                <img src="./assets/spider-man.jpg" alt="spider-man">
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="spider-man">
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
             <div>
-                <img src="./assets/spider-man.jpg" alt="spider-man">
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
         </div>
         <div class="row">
             <div>
-                <img src="./assets/spider-man.jpg" alt="Spider Man">
+                <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
+            </div>
+            <div>
+                <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <img src="./assets/spider-man.jpg" alt="Spider Man" width=100px height=100px>
             </div>
         </div>
     </div>
