--- a/main.html
+++ b/main.html
@@ -11,80 +11,78 @@
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
     </script>
-    <div class="fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-1">
                 <img src="./assets/spider-man.jpg" alt="Spider man" width=100px height=100px>
             </div>
         </div>
         <div class="row">
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-2">
                 <img src="./assets/spider-man.jpg" alt="spider man" width=100px height=100px>
             </div>
         </div>
         <div class="row">
-            <div>
+            <div class="col-sm-3">
                 <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-3">
                 <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
             </div>
-            <div>
+            <div class="col-sm-3">
                 <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
             </div>
         </div>
-        <div class="row">
-            <div>
-                <img src="./assets/spider-man.jpg" alt="Spider Man" width=100px height=100px>
-            </div>
+        <div class="col-sm-4">
+            <img src="./assets/spider-man.jpg" alt="Spider Man" width=100px height=100px>
         </div>
     </div>
 
