--- a/main.html
+++ b/main.html
@@ -81,8 +81,10 @@
                 <img src="./assets/spider-man.jpg" alt="spider-man" width=100px height=100px>
             </div>
         </div>
-        <div class="col-sm-1">
-            <img src="./assets/spider-man.jpg" alt="Spider Man" width=100px height=100px>
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="./assets/spider-man.jpg" alt="Spider Man" width=100px height=100px>
+            </div>
         </div>
     </div>
 
